kustomize/base-istio/virtualservice.yaml
# https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service # {"$kpt-set":"name"}
spec:
  hosts:
  - service.dev.acme.io # {"$kpt-set":"hosts"}
  gateways:
  - gateway.istio-system.svc.cluster.local # {"$kpt-set":"istio-gateway"}
  http:
  - name: service # {"$kpt-set":"name"}
    route:
    - destination:
        host: service # {"$kpt-set":"name"}
        port:
          number: 80
